--- a/web/styles/map.css
+++ b/web/styles/map.css
@@ -73,9 +73,27 @@ body {
     height: 40px;
 }
 
-#progress-bar {
-    position: absolute;
-    width: 100%;
+.wrapper {
     z-index: 1000;
-    bottom: 0px;
+    bottom: 3px;
+    position: absolute;
+    width: 98.5vw;
+    left: 0.5vw;
+    height: 10px;
+}
+
+.progress-bar {
+    width: 100%;
+    background-color: #e0e0e0;
+    padding: 3px;
+    border-radius: 3px;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, .2);
+}
+
+.progress-bar-fill {
+    display: block;
+    height: 7px;
+    background-color: #0a51bc;
+    border-radius: 3px;
+    transition: width 500ms ease-in-out;
 }
