--- a/web/styles/map.css
+++ b/web/styles/map.css
@@ -32,7 +32,7 @@ body {
     max-width: 300px;
     position: absolute;
     right: 10px;
-    top: 10px;
+    top: 60px;
     font-family: Arial, Helvetica, sans-serif;
     z-index: 1002;
     background-color: #fff;
@@ -96,4 +96,17 @@ body {
     background-color: #0a51bc;
     border-radius: 3px;
     transition: width 500ms ease-in-out;
+}
+
+#audio-toggle {
+    position: absolute;
+    cursor: pointer;
+    right: 10px;
+    top: 10px;
+    z-index: 1000;
+    height: 20px;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
