--- a/web/styles/map.css
+++ b/web/styles/map.css
@@ -16,7 +16,8 @@ body {
     top: 10px;
     left: 10px;
     z-index: 1001;
-    background-color: #fff;
+    background-color: #4364FB;
+    color: white;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);	
@@ -32,13 +33,24 @@ body {
     max-width: 300px;
     position: absolute;
     right: 10px;
-    top: 60px;
     font-family: Arial, Helvetica, sans-serif;
     z-index: 1002;
-    background-color: #fff;
+    color: white;
+    background-color: #4364FB;
     padding: 10px;
     border-radius: 5px;
+    transition: 0.5s;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#scene-description.start {
+    right: 30%;
+    bottom: 50%;
+    min-width: 39%;
+}
+
+#scene-description.after-start {
+    top: 60px;
 }
 
 @media (max-width: 576px) { 
@@ -50,13 +62,29 @@ body {
         bottom: 55px;
         top: unset;
     }
+
+    #scene-description.start {
+        min-width: unset;
+        left: 0px;
+        right: 0px;
+        bottom: 50%;
+    }
+
+    #scene-description.after-start {
+        min-width: unset;
+        left: 0px;
+        right: 0px;
+        top: unset;
+        bottom: 10%;
+    }
  }
 
 .scene-button {
     position: absolute;
     font-family: Arial, Helvetica, sans-serif;
     z-index: 1000;
-    background-color: #fff;
+    background-color: #4364FB;
+    color: white;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -75,11 +103,19 @@ body {
     display: none;
 }
 
-
 .start-scene-button {
     height: 40px;
-    left: 10px;
-    right: 10px;
+    left: 30%;
+    right: 30%;
+    bottom: 40%;
+}
+
+.scale-in {
+    transition: scale 1s;
+    scale: 1;
+    @starting-style {
+        scale: 0.3;
+    }
 }
 
 .wrapper {
@@ -114,7 +150,7 @@ body {
     top: 10px;
     z-index: 1000;
     height: 20px;
-    background-color: #fff;
+    background-color:  #4364FB;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
